@@ -11,7 +11,8 @@ class Poll(models.Model):
 		return self.question;
 	
 	def was_published_recently(self):
-		return self.pub_date >= timezone.now() - datetime.timedelta(days=1)
+		now = timezone.now();
+		return now - datetime.timedelta(days=1) <= self.pub_date < now
 		
 	was_published_recently.admin_order_field = 'pub_date';
 	was_published_recently.boolean = True;
