@@ -1,0 +1,7 @@
+body {
+	background: white url("images/grunge-bg-2.png");
+}
+
+li a{
+	color: green;
+}
