@@ -1,1 +1,1 @@
-{% if latest_poll_list %}	<ul>	{% for poll in latest_poll_list %}		<li><a href="{% url 'polls:detail' poll.id %}">{{ poll.question }}</a></li>	{% endfor %}	</ul>{% else %}	<p>No polls are available.</p>{% endif %}
+{% load staticfiles %}<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}" />{% if latest_poll_list %}	<ul>	{% for poll in latest_poll_list %}		<li><a href="{% url 'polls:detail' poll.id %}">{{ poll.question }}</a></li>	{% endfor %}	</ul>{% else %}	<p>No polls are available.</p>{% endif %}
