@@ -1,5 +1,13 @@
 [webapp_1.0.0.1 2014-03-17 张春生]
-1.新功能:增加refreshServer服务
+1.新功能：增加refreshServer服务
+
+[webapp_1.0.0.1 2014-03-19 张春生]
+1.新功能：增加polls应用
+2.新功能：使用generic views通用视图功能
+3.新功能：增加单元测试
+
+[webapp_1.0.0.1 2014-03-20 张春生]
+1.新功能：增加静态文件
 
 --备注分类
 1、新功能：
